--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                                         <h3><a target="_blank" href="#" class="links_ayuda"> ¿Necesitas Ayuda? </a></h3>
                                         
                                     </div>
-                                    <a class="dt-sc-button  alignleft ocean" target="_blank" href="#"><span class="interior_boton"> Por favor indíquenos <b>su requerimiento.</b></span></a> <div class="dt-sc-clear"></div> 
+                                    <a class="dt-sc-button  alignleft ocean" target="_blank" href="registro_pqs.html"><span class="interior_boton"> Por favor indíquenos <b>su requerimiento.</b></span></a> <div class="dt-sc-clear"></div> 
                                 </div>
                                 
                             </div>
