desarrrolo-perdir taxi
desarrollo de la seccion pedir taxi

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                         </li>
                                     </ul>
                                     <div class="boton-header-01">
-                                        <a class="dt-sc-button alignleft ocean margen-boton-header " target="_blank" href="#"><span class="interior_boton boton-header-01"> Solicitar <b>Servicio</b></span></a>
+                                        <a class="dt-sc-button alignleft ocean margen-boton-header " target="_blank" href="perdir_taxi.html"><span class="interior_boton boton-header-01"> Solicitar <b>Servicio</b></span></a>
                                     </div>
                                     <div class="boton-header-02">
                                         <a class="dt-sc-button alignleft ocean margen-boton-header " target="_blank" href="#"><span class="menu-icon fa fa-home interior_icono ta-icon"></br><b class="texto-boton-2">solicitar</br> servicio</b></span></a>
