--- a/conductor.html
+++ b/conductor.html
@@ -147,7 +147,10 @@
                                             </div>
                                             <span style="text-align: center;">CURSOS</span>
                                             <p style="text-align:justify; font-size: 14px;">Capacitaciones y certificaciones, gracias a convenios con el SENA, universidades y el Instituto Distrital de Turismo.</p>
-                                            
+                                        </div>
+                                        
+                                        <div style="display: block; width: 58%; margin: 20px auto;">
+                                            <a class="dt-sc-button alignleft ocean"  href="#"><span class="interior_boton"><b>Mas Inforrmacion</b></span></a> <div class="dt-sc-clear"></div>
                                         </div>
                                     </div>
                                     <div class="column dt-sc-two-sixth first">
