--- a/vuelos.html
+++ b/vuelos.html
@@ -121,6 +121,7 @@
                         </div>
                         <div class="dt-sc-hr-invisible-medium"></div>   
                         <div class="dt-sc-clear"></div>
+                        <!--clima / reloj / fecha-->
                         <div class="dt-sc-five-sixth_2 column">
                             <div style="width: 100%; height: 160px;margin-top: 10px;">
                                 <div style="display: flex;float: right;">
@@ -158,6 +159,8 @@
                                 
                             </div>
                        </div> 
+
+                         <!--clima / reloj / fecha-->
 
                         <div style="width: 100%; height: 350px; display: block;"></div>                                                                            
                         <div class="dt-sc-hr-invisible"></div>   
